test/operator/negate_nonnum.lox
-"s" // error:  operand must be a number
